# sterilink_trajectory_planning

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: trajectory_planning.launch.py
sterilink_trajectory_planning/: setup.cfg  setup.py  trajectory_planning.py
sterilink_trajectory_planning/sterilink_trajectory_planning/: trajectory_planning.py
