<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sterilink_trajectory_planning</name>
  <version>0.0.0</version>
  <description>Trajectory Planning Node for STERILINK Autonomous Mobile Robot</description>
  <maintainer email="has8385s@hs-coburg.de">Hassan Abdelhadi</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>derived_object_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>sterilink_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
